Removed fixed margins and fix display on mobile devices

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -39,19 +39,32 @@
 
 .leftColumn {
   flex:45%;
-  padding-left: 5%;
-  padding-top: 2rem 0;
-  margin: 50px;
+  padding-left: 7%;
+  padding-right: 3%;
+  padding-bottom: 4em;
   background-color: var(--background-colour-variant);
   background-clip: content-box;
 }
 
 .rightColumn {
   flex:45%;
-  padding-right: 5%;
-  margin: 50px;
+  padding-right: 7%;
+  padding-left: 3%;
+  padding-bottom: 4em;
   background-color: var(--background-colour-variant);
   background-clip: content-box;
+}
+
+@media screen and (max-width: 996px) {
+  .leftColumn {
+    padding: 0 0.2em 2em 0;
+  }
+}
+
+@media screen and (max-width: 996px) {
+  .rightColumn {
+    padding: 0 0 2em 0.2em;
+  }
 }
 
 .imgCol {
